dockerfile and pom parent version modification-2